Added link to register

--- a/YFrontend/src/app/login/login.page/login.page.component.html
+++ b/YFrontend/src/app/login/login.page/login.page.component.html
@@ -34,6 +34,12 @@
           </ion-col>
         </ion-row>
 
+        <ion-row>
+                <small>
+                    Dont have an account? <span class="link" [routerLink]="['/login/register']">Register here</span>.
+                </small>
+        </ion-row>
+
       </ion-grid>
     </form>
   </ion-grid>
