Can now register in the frontend

--- a/YFrontend/src/app/login/register/register.component.html
+++ b/YFrontend/src/app/login/register/register.component.html
@@ -13,7 +13,7 @@
           </ion-row>
 
           <ion-row>
-            <label for="username">Email</label>
+            <label for="email">Email</label>
           </ion-row>
   
           <ion-row>
@@ -29,7 +29,7 @@
           </ion-row>
 
           <ion-row>
-            <label for="password">Repeat Password</label>
+            <label for="repeatpassword">Repeat Password</label>
           </ion-row>
   
           <ion-row>
