--- a/YFrontend/src/app/home/home.page.html
+++ b/YFrontend/src/app/home/home.page.html
@@ -12,9 +12,7 @@
       <ion-title size="large">T</ion-title>
     </ion-toolbar>
   </ion-header>
-
   <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+    <app-postview></app-postview>
   </div>
 </ion-content>
