[F] Can now add posts

--- a/YFrontend/src/app/home/postview/postview.component.html
+++ b/YFrontend/src/app/home/postview/postview.component.html
@@ -5,6 +5,7 @@
         <ion-col>
             <ion-button (click)="selectView('latest')" [disabled]="selectedView === 'latest'">Latest</ion-button>
             <ion-button (click)="selectView('following')" [disabled]="selectedView === 'following'">Following</ion-button>
+            <ion-button (click)="createPost()">Create post</ion-button>
         </ion-col>
         
         <ion-col></ion-col>
